--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+hr{
+  height: 1px;
+  background-color: rgba(204, 204, 204, 0.432);
+  border: none;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+    margin: 40px 340px;
+    padding-block: 10px;
+    background: #F4F5F7;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: #000;
   }
-  to {
-    transform: rotate(360deg);
+  .img{
+    width: 88px;
+    height: 88px;
+    border-radius: 100%;
+    justify-self: center;
+    margin-left: 30px;
   }
-}
+  
+  .links{
+    display: grid;
+    grid-column: 1 / -1;
+    gap: 30px;
+  }
+  
+  .btn{
+    font-size: 18px;
+    height: 40px;
+    padding-inline: 40px;
+    color: #000;
+    text-align: center;
+    align-items: center;
+    filter: drop-shadow(0px 1px 2px rgba(16, 24, 40, 0.267));
+    background-color: #d1d2d4;
+    width: minmax(340px, auto);
+    text-decoration: none;
+  }
+  
+  .btn:hover{
+    background-color: rgb(240, 240, 240);
+  }
+  
+  .icon{
+    text-align: center;
+    margin-top: 20px;
+  }
+  .icon > img{
+    width: 15px;
+    margin: 10px;
+  }
+
+  .footer--icon{
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    gap: 6rem;
+  }
+  
+  .footer--text{
+    margin-inline: 1rem;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 24px;
+    color: #667085;
+  }
+
+  .floor--logo{
+    width: 5rem;
+    height: 1rem;
+  }
