--- a/src/App.css
+++ b/src/App.css
@@ -5,72 +5,125 @@ hr{
 }
 
 .App-header {
-    margin: 40px 340px;
-    padding-block: 10px;
-    background: #F4F5F7;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: #000;
-  }
-  .img{
-    width: 88px;
-    height: 88px;
-    border-radius: 100%;
-    justify-self: center;
-    margin-left: 30px;
-  }
-  
-  .links{
-    display: grid;
-    grid-column: 1 / -1;
-    gap: 30px;
-  }
-  
-  .btn{
-    font-size: 18px;
-    height: 40px;
-    padding-inline: 40px;
-    color: #000;
-    text-align: center;
-    align-items: center;
-    filter: drop-shadow(0px 1px 2px rgba(16, 24, 40, 0.267));
-    background-color: #d1d2d4;
-    width: minmax(340px, auto);
-    text-decoration: none;
-  }
-  
-  .btn:hover{
-    background-color: rgb(240, 240, 240);
-  }
-  
-  .icon{
-    text-align: center;
-    margin-top: 20px;
-  }
-  .icon > img{
-    width: 15px;
-    margin: 10px;
-  }
+  padding-block: 10px;
+  background: #F4F5F7;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: #000;
+}
 
-  .footer--icon{
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-    gap: 6rem;
+.share--icon{
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  right: 208px;
+  top: -10px;
+  background: #FFFFFF;
+  border: 1px dashed #D0D5DD;
+  border-radius: 20px;
+}
+
+.header{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0px;
+  gap: 24px;
+  isolation: isolate;
+}
+
+.img{
+  width: 88px;
+  height: 88px;
+  border-radius: 100%;
+  justify-self: center;
+  margin-left: 30px;
+}
+  
+.links{
+  display: grid;
+  grid-column: 1 / -1;
+  gap: 17px;
+  width: 1000px;
+  height: 576px;;
+}
+  
+.btn{
+  align-self: stretch;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  height: 60px;
+  color: #000;
+  text-align: center;
+  filter: drop-shadow(0px 1px 2px rgba(16, 24, 40, 0.267));
+  background-color: #d1d2d4;
+  text-decoration: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
+}
+
+.btn:hover{
+  background-color: rgb(240, 240, 240);
+}
+
+.icon{
+  text-align: center;
+  margin-top: 20px;
+}
+.icon > img{
+  width: 15px;
+  margin: 10px;
+}
+
+.footer--icon{
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  gap: 6rem;
+}
+
+.footer--text{
+  margin-inline: 1rem;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 24px;
+  color: #667085;
+}
+
+.floor--logo{
+  width: 5rem;
+  height: 1rem;
+}
+
+@media all and (max-width: 520px) {
+  .share--icon{
+    right: 582px;
+    left: 500px;
+   
   }
   
-  .footer--text{
-    margin-inline: 1rem;
-    font-weight: 400;
-    font-size: 10px;
-    line-height: 24px;
-    color: #667085;
+}
+@media all and (max-width: 680px) {
+  .share--icon{
+    right: 582px;
+    left: 500px;
+   
   }
+  
+}
 
-  .floor--logo{
-    width: 5rem;
-    height: 1rem;
+@media all and (max-width: 720px) {
+  .share--icon{
+    right: 108px;
+    left: 500px;
+   
   }
+  
+}
