--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
 body {
   margin: 0;
   background: #f6f7f8;
-  font-family: 'Inter';
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Inter', sans-serif;
 }
