--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ hr{
 
 .App-header {
   padding-block: 10px;
-  background: #F4F5F7;
+  background: #fff;
   display: flex;
   flex-direction: column;
   align-items: center;
