--- a/src/App.css
+++ b/src/App.css
@@ -1,133 +1,160 @@
-body{
-  font-family: 'Inter', sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Inter", sans-serif;
+}
+.container {
+  padding: 64px 0;
+}
+.row {
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0 32px;
 }
 
-hr{
-  height: 1px;
-  background-color: rgba(204, 204, 204, 0.432);
-  border: none;
+/* PROFILE SECTION STYLES */
+#profile {
+  position: relative;
 }
 
-.App-header {
-  padding-block: 10px;
-  background: #fff;
+.profile__container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  color: #000;
+  margin-bottom: 56px;
 }
 
-.share--icon{
-  position: absolute;
+.profile__img--mask {
+  height: 88px;
+  width: 88px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-bottom: 24px;
+}
+#profile__img {
+  width: 100%;
+}
+
+.profile__name {
+  font-weight: 700;
+  font-size: 20px;
+  text-align: center;
+  color: #101828;
+}
+
+/* SHARE BUTTON  */
+
+.button__share {
+  display: flex;
   width: 40px;
   height: 40px;
-  right: 208px;
-  top: -10px;
-  background: #FFFFFF;
-  border: 1px dashed #D0D5DD;
-  border-radius: 20px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  border: 1px dotted #98a2b3;
+  background-color: white;
+  cursor: pointer;
+}
+.button__wrapper {
+  position: absolute;
+  top: -20px;
+  right: 10%;
 }
 
-.header{
+/* LINKS SECTION
+ */
+.link {
+  margin-bottom: 24px;
+}
+.link__btn {
+  padding: 24px;
+  gap: 8px;
+  border: 1px solid #eaecf0;
+  border-radius: 8px;
+  width: 100%;
+  text-align: center;
+  font-weight: 500;
+  font-size: 18px;
+  cursor: pointer;
+}
+#slack {
+  display: none;
+}
+.links__wrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 0px;
-  gap: 24px;
-  isolation: isolate;
+}
+.link:last-child {
+  margin-bottom: 0;
 }
 
-.img{
-  width: 88px;
-  height: 88px;
-  border-radius: 100%;
-  justify-self: center;
-  margin-left: 30px;
-}
-  
-.links{
-  display: grid;
-  grid-column: 1 / -1;
-  gap: 17px;
-  width: 1000px;
-  height: 576px;;
-}
-  
-.btn{
-  align-self: stretch;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 28px;
-  height: 60px;
-  color: #000;
-  text-align: center;
-  filter: drop-shadow(0px 1px 2px rgba(16, 24, 40, 0.267));
-  background-color: #d1d2d4;
-  text-decoration: none;
+/* SOCIAL SECTION  
+*/
+
+.social__wrapper {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 0px;
+  padding: 24px 32px;
+  margin-top: 24px;
+}
+.github__icon {
+  margin-left: 24px;
 }
 
-.btn:hover{
-  background-color: rgb(240, 240, 240);
-}
+/* FOOTER  */
 
-.icon{
-  text-align: center;
-  margin-top: 20px;
+.footer__container {
+  padding: 48px 0;
 }
-.icon > img{
-  width: 15px;
-  margin: 10px;
+.footer__row {
+  width: 100%;
+  max-width: 1300px;
+  margin: 0 auto;
+  padding: 0 32px;
 }
-
-.footer--icon{
-  align-items: center;
+.footer__wrapper {
   display: flex;
-  flex-direction: row;
-  gap: 6rem;
+  justify-content: space-between;
+  align-items: flex-end;
 }
-
-.footer--text{
-  margin-inline: 1rem;
-  font-weight: 400;
-  font-size: 10px;
-  line-height: 24px;
+p {
   color: #667085;
+  font-weight: 400;
+  font-size: 16px;
 }
 
-.floor--logo{
-  width: 5rem;
-  height: 1rem;
+/* RESPONSIVE */
+.hamburger {
+  display: none;
 }
 
-@media all and (max-width: 520px) {
-  .share--icon{
-    right: 582px;
-    left: 500px;
-   
-  }
-  
-}
-@media all and (max-width: 680px) {
-  .share--icon{
-    right: 582px;
-    left: 500px;
-   
-  }
-  
+@media (max-width:375px) {
+    footer {
+      display: none;
+    }
+    .hamburger {
+      display: block;
+    }
+    .share {
+      display: none;
+    }
+    .button__wrapper {
+      right: 0;
+    }
 }
 
-@media all and (max-width: 720px) {
-  .share--icon{
-    right: 108px;
-    left: 500px;
-   
+@media (max-width:652px) {
+  footer {
+    display: none;
   }
-  
+}
+@media (max-width:225px) {
+  .button__wrapper {
+    right: -20%;
+  }
 }
